--- a/video.html
+++ b/video.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-​<title>Beauty Salon</title>
+    <title>Beauty Salon</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -38,15 +38,15 @@
                 </div>
             </nav>
         </div>
-    </div>                                         <!--End of Nav-bar-->
-​<div class="row">
+        </div>                                         <!--End of Nav-bar-->
+        <div class="row">
         <div class="col-12">
-            <h1 class="main-tagline text-center"><em>The place for all your beauty needs</em></h1>
+            <h1 class="main-tagline text-center">The place for all your beauty needs</h1>
         </div>
-    <div class="embed-responsive embed-responsive-16by9">
+        <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6eeldaXgz-c?rel=0" allowfullscreen></iframe>
-    </div>
-​<footer class="row bordered mt-3">
+        </div>
+        <footer class="row bordered mt-3">
         <div class="col-12 col-lg-4 mt-2">
         <h2>Address :</h2>
             <p class="footer">Georges Quay</p>
@@ -57,8 +57,8 @@
             <p>0851045159</p>
         </div>
         <div class="col-12 col-lg-4 mt-2">
-            <h3 class="main-tagline text-center"><em>"You are in a beauty contest every day of your life.</em></h3>
-            <h3 class="main-tagline text-center"><em>Treat Yourself."</em></h3>
+            <h3 class="main-tagline text-center">"You are in a beauty contest every day of your life.</h3>
+            <h3 class="main-tagline text-center">Treat Yourself."</h3>
         </div>
         <div class="col-12 col-lg-4 mt-2">
             <h2>Social Networks </h2>
@@ -68,7 +68,8 @@
         <li><a class="social-link" href="https://www.youtube.com/embed/6eeldaXgz-c?rel=0">Youtube <i class="fa fa-youtube"></i></a></li>
         </ul>
         </div>
-​</footer>
+        </footer>
+        </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
