--- a/contact.html
+++ b/contact.html
@@ -39,15 +39,15 @@
             </nav>
         </div>
     </div>                     <!--End of Nav-bar-->
-    <!--Section: Contact v.2-->
     <section class="mb-4">                            <!--Section heading-->
-        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>     <!--Section description-->
-        <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
+        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>     
+        <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us
+            directly. Our team will come back to you within
             a matter of hours to help you.</p>
-            <div class="row">                                     <!--Grid column-->
+        <div class="row">                                     <!--Grid column-->
             <div class="col-md-12 mb-md-0 mb-5">
-                <form id="contact-form" name="contact-form" action="mail.php" method="POST">  
-                    <div class="row">                
+                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+                    <div class="row">
                         <div class="col-md-6">
                             <div class="md-form mb-0">
                                 <input type="text" id="name" name="name" class="form-control">
@@ -69,23 +69,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">                              <!--Grid column-->
+                    <div class="row">                              
                         <div class="col-md-12">
-                         <div class="md-form">
+                            <div class="md-form">
                                 <textarea id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
                                 <label for="message">Your message</label>
                             </div>
-​
                         </div>
-                    </div>                     <!--Grid row-->
- </form>
-​<div class="text-center text-md-left">
- <a class="btn btn-light btn-lg" onclick="document.getElementById('contact-form').submit();">Send</a>
-</div>
-<div class="status"></div>
- </div>                                  <!--Grid column-->
-​</div>
-​ </section>                   
+                    </div>                     
+                </form>
+                <div class="text-center text-md-left">
+                    <a class="btn btn-light btn-lg" onclick="document.getElementById('contact-form').submit();">Send</a>
+                </div>
+                <div class="status"></div>
+            </div>                                 
+    </section>              
 ​<footer class="row bordered mt-3">
         <div class="col-12 col-lg-4 mt-2">
         <h2>Address :</h2>
