--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">                           <!---head--->
+<html lang="en">                           <!---head-->
 <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-4">          <!---home page--->
+        <div class="col-12 col-lg-4">          <!---home page-->
             <h2 class="home-page">NAIL TREATMENTS</h2>
             <ul>
             <li>Manicures</li>
@@ -84,7 +84,7 @@
             <li>Colour</li>
             </ul>
         </div>
-    </div>                             <!---footer--->
+    </div>                             <!---footer-->
     <footer class="row bordered mt-3">
         <div class="col-12 col-lg-4 mt-2">
         <h2>Address :</h2>
@@ -108,7 +108,7 @@
         </ul>
         </div>
 ​</footer>
-</div>                                   <!---script--->
+</div>                                   <!---script-->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
